--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -13,7 +13,7 @@ tabs:
   home: 홈
   categories: 카테고리
   tags: 태그
-  archives: 아카이브
+  posts: 아카이브
   about: 정보
 
 # the text displayed in the search bar & search results
@@ -52,9 +52,9 @@ meta: Powered by :PLATFORM with :THEME theme.
 
 not_found:
   statment: 해당 URL은 존재하지 않습니다.
-  hint_template: :HEAD_BAK을 눌러 다시 찾거나 :ARCHIVES_PAGE에서 검색해 주세요.
+  hint_template: :HEAD_BAK을 눌러 다시 찾거나 :posts_PAGE에서 검색해 주세요.
   head_back: 홈으로 돌아가기
-  archives_page: 아카이브 페이지
+  posts_page: 아카이브 페이지
 
 # ----- Posts related labels -----
 
