Add more articles

--- a/_posts/2022-01-03-SwiftUI.md
+++ b/_posts/2022-01-03-SwiftUI.md
@@ -7,3 +7,12 @@ date: 2022-01-03 20:16 -0800
 categories: [Getting Started]
 tags: [Swift, SwiftUI, iOS]
 ---
+
+You've probably never heard of this before, so I'll clear some things up.
+
+- SwiftUI is a *framework*, which just means "developer tool."
+- SwiftUI is built using the Swift programming language, which we'll go over in the next section.
+- SwiftUI is kind of like HTML -- you write apps using it.
+
+![](/assets/swiftui-banner.png)
+*Credit: Apple*
