--- a/_posts/2022-01-03-SwiftUI.md
+++ b/_posts/2022-01-03-SwiftUI.md
@@ -8,6 +8,8 @@ categories: [Getting Started]
 tags: [Swift, SwiftUI, iOS]
 ---
 
+### Overview
+
 You've probably never heard of [SwiftUI](https://developer.apple.com/xcode/swiftui/) before, so I'll clear some things up.
 
 - SwiftUI is a *framework*, which just means "developer tool."
@@ -43,4 +45,4 @@ struct ContentView: View {
 
 [`Text`](https://developer.apple.com/documentation/swiftui/text) is a built-in view. There are several dozen more of these views -- here's a [list](https://developer.apple.com/documentation/swiftui/view#conforming-types). However, we'll only focus on a couple.
 
-At its core, that's all SwiftUI is -- a framework to combine and modify views. In the next tutorial section, we'll go over SwiftUI in more detail.
+At its core, that's all SwiftUI is -- a framework to combine and modify views. In the next section, we'll go over SwiftUI in more detail.
