Add testing order

--- a/_posts/2022-01-03-SwiftUI.md
+++ b/_posts/2022-01-03-SwiftUI.md
@@ -14,7 +14,7 @@ You've probably never heard of [SwiftUI](https://developer.apple.com/xcode/swift
 
 - SwiftUI is a *framework*, which just means "developer tool."
 - SwiftUI is built using the Swift programming language, which we'll go over in the next section.
-- SwiftUI is kind of like HTML -- you write apps using it.
+- SwiftUI is the equivalent to HTML + CSS -- you write and style views using it.
 
 ![](/assets/swiftui-banner.png)
 *Credit: Apple*
